# spectral-rendering

./: .gitignore  Haslo  README.md  pyproject.toml  sites.txt
QT-GUI/: CMakeLists.txt  envmapdirselector.cpp  envmapdirselector.h  main.cpp  qlineedittoqfiledialog.cpp  qlineedittoqfiledialog.h  trak_mainwindow.cpp  trak_mainwindow.h  trak_mainwindow.ui
deployed_GUI/: README.md
simple-rt/resources/shaders/simple-rt/: simple-rt.frag  simple-rt.vert
simple-rt/resources/shaders/simple-rt-rgb/: simple-rt-rgb.frag
simple-rt/src/: base_window.py  config.py  main.py  phong_window.py  simple_rt_window.py
