[tool.poetry]
name = "spectral-rendering"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "spectral_rendering"}]

[tool.poetry.dependencies]
python = "^3.10"
moderngl = "^5.7.4"
moderngl-window = "^2.4.2"
pygame = "^2.1.2"
numpy = "^1.24.1"
pywavefront = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
